Fixed horizontal scroll in mobile view

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,6 +47,10 @@ h1, h2 {
     padding-right: 0;
 }
 
+.pa-left {
+    padding-left: 1rem;
+}
+
 .uppercase {
     text-transform: uppercase;
 }
